# my_pydantic

./: .env  Github.code-workspace  README.md  hello.py  pyproject.toml  r.txt
1-intro/: 1.2-agent-openai.py  y.1.4-agent-azure.py
_docs/: 00-installs.md
